--- a/src/app/pages/auth/auth.component.scss
+++ b/src/app/pages/auth/auth.component.scss
@@ -10,7 +10,7 @@ main{
     text-align: center;
     color: white;
     text-decoration: none;
-    border-radius: 20%;
+    border-radius: 1rem;
     background-color: black;
     padding: 1.5rem;
 }
