--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,3 +1,7 @@
+//Variables
+$border-radius-value: 1.5rem;
+
+//Tags
 main{
     padding: 2rem;
 }
@@ -10,26 +14,77 @@ header{
     margin-bottom: 0.5rem
 }
 
+//Classes
 .links{
     margin-left: 0.5rem;
 }
 
 .filter{
-    padding: 1.2rem;
+    padding: 1.5rem;
     background-color: #E5E5E5;
-    border-radius: 1.5rem;
+    border-radius: $border-radius-value;
+}
+
+.separate{
+    margin: 0.5rem 0 2.5rem;
 }
 
 .filter>*{
-    margin-top: 0.5rem;
+    margin-top: 0.75rem;
 }
 
 .filter-title{
-    margin: 0 0.5rem;
+    margin: 0 0.75rem;
+    font-weight: bold;
 }
 
 .filter-search-bar{
     display: flex;
+    flex: 1 1 0%;
     align-items: center;
+    padding: 0.75rem;
+    background-color: white;
+    border-radius: 1rem;
+}
+
+.filter-search-bar>*{
+    margin-left: 0.5rem;
+}
+
+.filter-input-search{
+    display: flex;
+    flex: 1 1 0%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    outline: none;
+    border: none;
+    font-size: large;
+}
+
+.units{
+    display: grid;
+    grid-auto-flow: column;
+    overflow-y: auto;
     padding: 1rem;
+    background-color: #E5E5E5;
+    border-radius: $border-radius-value;
+}
+
+.units-column{
+    display: grid;
+    grid-auto-flow: row;
+    row-gap: 0.25rem;
+}
+
+.units-column *{
+    margin-top: 0.5rem;
+}
+
+.units-column-title{
+    font-weight: bold;
+}
+
+.units-element{
+    background-color: white;
 }
