--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,7 +4,7 @@
             <path d="M1.74994 9.87498H3.62494V6.74998C3.62494 6.5729 3.68483 6.42446 3.80463 6.30467C3.92442 6.18488 4.07286 6.12498 4.24994 6.12498H6.74994C6.92702 6.12498 7.07546 6.18488 7.19525 6.30467C7.31504 6.42446 7.37494 6.5729 7.37494 6.74998V9.87498H9.24994V4.24998L5.49994 1.43748L1.74994 4.24998V9.87498ZM0.499939 9.87498V4.24998C0.499939 4.05207 0.54421 3.86457 0.632751 3.68748C0.721293 3.5104 0.843689 3.36457 0.999939 3.24998L4.74994 0.437485C4.96869 0.270818 5.21869 0.187485 5.49994 0.187485C5.78119 0.187485 6.03119 0.270818 6.24994 0.437485L9.99994 3.24998C10.1562 3.36457 10.2786 3.5104 10.3671 3.68748C10.4557 3.86457 10.4999 4.05207 10.4999 4.24998V9.87498C10.4999 10.2187 10.3775 10.513 10.1328 10.7578C9.88796 11.0026 9.59369 11.125 9.24994 11.125H6.74994C6.57285 11.125 6.42442 11.0651 6.30463 10.9453C6.18483 10.8255 6.12494 10.6771 6.12494 10.5V7.37498H4.87494V10.5C4.87494 10.6771 4.81504 10.8255 4.69525 10.9453C4.57546 11.0651 4.42702 11.125 4.24994 11.125H1.74994C1.40619 11.125 1.11192 11.0026 0.867126 10.7578C0.622335 10.513 0.499939 10.2187 0.499939 9.87498Z" fill="#1C1B1F"/>
         </svg>
         
-        <span class="divnks">Home >> Unidades</span>
+        <span class="links">Home >> Unidades</span>
     </header>
 
     <section class="filter separate">
@@ -19,55 +19,44 @@
         </form>
     </section>
 
-    <section class="units">
-        <div class="units-column">
-            <span class="units-column-title">{{colunsTitles[0]}}</span>
+    <table mat-table [dataSource]="data">
+        <ng-container matColumnDef="distritos">
+            <th mat-header-cell *matHeaderCellDef>DISTRITOS</th>
+            <td mat-cell *matCellDef="let element">{{element.district}}</td>
+        </ng-container>
 
-            <div>
-                <div *ngFor="let item of data" class="units-element">
-                    <span>{{ item.district }}</span>
-                </div>
-            </div>
-        </div>
+        <ng-container matColumnDef="unidades">
+            <th mat-header-cell *matHeaderCellDef>UNIDADES</th>
+            <td mat-cell *matCellDef="let element">
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M6.50859 10.0833V10.9167C6.50859 11.2639 6.64094 11.559 6.90564 11.8021C7.17034 12.0451 7.49175 12.1667 7.86989 12.1667C8.24803 12.1667 8.56945 12.0451 8.83415 11.8021C9.09885 11.559 9.23119 11.2639 9.23119 10.9167V10.0833H10.1387C10.5169 10.0833 10.8383 9.96179 11.103 9.71874C11.3677 9.47568 11.5 9.18054 11.5 8.83332C11.5 8.4861 11.3677 8.19096 11.103 7.94791C10.8383 7.70485 10.5169 7.58332 10.1387 7.58332H9.23119V6.74999C9.23119 6.40277 9.09885 6.10763 8.83415 5.86457C8.56945 5.62152 8.24803 5.49999 7.86989 5.49999C7.49175 5.49999 7.17034 5.62152 6.90564 5.86457C6.64094 6.10763 6.50859 6.40277 6.50859 6.74999V7.58332H5.60106C5.22292 7.58332 4.9015 7.70485 4.6368 7.94791C4.3721 8.19096 4.23976 8.4861 4.23976 8.83332C4.23976 9.18054 4.3721 9.47568 4.6368 9.71874C4.9015 9.96179 5.22292 10.0833 5.60106 10.0833H6.50859ZM2.42469 15.5C1.92554 15.5 1.49825 15.3368 1.1428 15.0104C0.787345 14.684 0.609619 14.2917 0.609619 13.8333V6.33332C0.609619 6.06943 0.673903 5.81943 0.80247 5.58332C0.931038 5.34721 1.10876 5.15277 1.33565 4.99999L6.78085 1.24999C7.09849 1.02777 7.4615 0.916656 7.86989 0.916656C8.27828 0.916656 8.6413 1.02777 8.95893 1.24999L14.4041 4.99999C14.631 5.15277 14.8087 5.34721 14.9373 5.58332C15.0659 5.81943 15.1302 6.06943 15.1302 6.33332V13.8333C15.1302 14.2917 14.9524 14.684 14.597 15.0104C14.2415 15.3368 13.8142 15.5 13.3151 15.5H2.42469ZM2.42469 13.8333H13.3151V6.33332L7.86989 2.58332L2.42469 6.33332V13.8333Z" fill="#1C1B1F"/>
+                </svg>
+                    
+                {{element.name}}
+            </td>
+        </ng-container>
 
-        <div class="units-column">
-            <span class="units-column-title">{{colunsTitles[1]}}</span>
+        <ng-container matColumnDef="boletim">
+            <th mat-header-cell *matHeaderCellDef>BOLETIM</th>
 
-            <div>
-                <div *ngFor="let item of data" class="units-element">
-                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M6.50859 10.0833V10.9167C6.50859 11.2639 6.64094 11.559 6.90564 11.8021C7.17034 12.0451 7.49175 12.1667 7.86989 12.1667C8.24803 12.1667 8.56945 12.0451 8.83415 11.8021C9.09885 11.559 9.23119 11.2639 9.23119 10.9167V10.0833H10.1387C10.5169 10.0833 10.8383 9.96179 11.103 9.71874C11.3677 9.47568 11.5 9.18054 11.5 8.83332C11.5 8.4861 11.3677 8.19096 11.103 7.94791C10.8383 7.70485 10.5169 7.58332 10.1387 7.58332H9.23119V6.74999C9.23119 6.40277 9.09885 6.10763 8.83415 5.86457C8.56945 5.62152 8.24803 5.49999 7.86989 5.49999C7.49175 5.49999 7.17034 5.62152 6.90564 5.86457C6.64094 6.10763 6.50859 6.40277 6.50859 6.74999V7.58332H5.60106C5.22292 7.58332 4.9015 7.70485 4.6368 7.94791C4.3721 8.19096 4.23976 8.4861 4.23976 8.83332C4.23976 9.18054 4.3721 9.47568 4.6368 9.71874C4.9015 9.96179 5.22292 10.0833 5.60106 10.0833H6.50859ZM2.42469 15.5C1.92554 15.5 1.49825 15.3368 1.1428 15.0104C0.787345 14.684 0.609619 14.2917 0.609619 13.8333V6.33332C0.609619 6.06943 0.673903 5.81943 0.80247 5.58332C0.931038 5.34721 1.10876 5.15277 1.33565 4.99999L6.78085 1.24999C7.09849 1.02777 7.4615 0.916656 7.86989 0.916656C8.27828 0.916656 8.6413 1.02777 8.95893 1.24999L14.4041 4.99999C14.631 5.15277 14.8087 5.34721 14.9373 5.58332C15.0659 5.81943 15.1302 6.06943 15.1302 6.33332V13.8333C15.1302 14.2917 14.9524 14.684 14.597 15.0104C14.2415 15.3368 13.8142 15.5 13.3151 15.5H2.42469ZM2.42469 13.8333H13.3151V6.33332L7.86989 2.58332L2.42469 6.33332V13.8333Z" fill="#1C1B1F"/>
-                    </svg>
-                        
-                    <span>{{ item.name }}</span>
-                </div>
-            </div>
-        </div>
+            <td mat-cell *matCellDef="let element">
+                <a href="">Tuberculose</a>
+                <a href="">Hanseniase</a>
+            </td>
+        </ng-container>
 
-        <div class="units-column">
-            <span class="units-column-title">{{colunsTitles[2]}}</span>
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>STATUS</th>
 
-            <div>
-                <div *ngFor="let item of data">
-                    <a href="" class="units-element">Tuberculose</a>
+            <td mat-cell *matCellDef="let element">
+                <button type="button">
+                    <span>Aberto</span>
+                    <div></div>
+                </button>
+            </td>
+        </ng-container>
 
-                    <a href="" class="units-element">Hanseníase</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="units-column">
-            <span class="units-column-title">{{colunsTitles[3]}}</span>
-
-            <div>
-                <div *ngFor="let item of data">
-                    <button class="units-element">
-                        <span>Aberto</span>
-
-                        <div class="status-open"></div>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </section>
+        <tr mat-header-row *matHeaderRowDef="columnsTitles"></tr>
+        <tr mat-row *matRowDef="let row; columns: columnsTitles;"></tr>
+    </table>
 </main>
