--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -14,6 +14,10 @@ header{
     margin-bottom: 0.5rem
 }
 
+table{
+    background-color: #E5E5E5;
+}
+
 //Classes
 .links{
     margin-left: 0.5rem;
@@ -62,7 +66,7 @@ header{
     font-size: large;
 }
 
-.units{
+/*.units{
     display: grid;
     grid-auto-flow: column;
     overflow-y: auto;
@@ -74,7 +78,8 @@ header{
 .units-column{
     display: grid;
     grid-auto-flow: row;
-    row-gap: 0.25rem;
+    //row-gap: 0.25rem;
+    text-align: center;
 }
 
 .units-column *{
@@ -87,4 +92,4 @@ header{
 
 .units-element{
     background-color: white;
-}
+}*/
