feat: webhook functional && button change

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -28,7 +28,7 @@
                     <th mat-header-cell *matHeaderCellDef>DISTRITOS</th>
                     <td mat-cell *matCellDef="let element">
                         <div>
-                            {{element.district}}
+                            {{element.co_unidade_saude_atual}}
                         </div>
                     </td>
                 </ng-container>
@@ -41,7 +41,7 @@
                                 <path d="M6.50859 10.0833V10.9167C6.50859 11.2639 6.64094 11.559 6.90564 11.8021C7.17034 12.0451 7.49175 12.1667 7.86989 12.1667C8.24803 12.1667 8.56945 12.0451 8.83415 11.8021C9.09885 11.559 9.23119 11.2639 9.23119 10.9167V10.0833H10.1387C10.5169 10.0833 10.8383 9.96179 11.103 9.71874C11.3677 9.47568 11.5 9.18054 11.5 8.83332C11.5 8.4861 11.3677 8.19096 11.103 7.94791C10.8383 7.70485 10.5169 7.58332 10.1387 7.58332H9.23119V6.74999C9.23119 6.40277 9.09885 6.10763 8.83415 5.86457C8.56945 5.62152 8.24803 5.49999 7.86989 5.49999C7.49175 5.49999 7.17034 5.62152 6.90564 5.86457C6.64094 6.10763 6.50859 6.40277 6.50859 6.74999V7.58332H5.60106C5.22292 7.58332 4.9015 7.70485 4.6368 7.94791C4.3721 8.19096 4.23976 8.4861 4.23976 8.83332C4.23976 9.18054 4.3721 9.47568 4.6368 9.71874C4.9015 9.96179 5.22292 10.0833 5.60106 10.0833H6.50859ZM2.42469 15.5C1.92554 15.5 1.49825 15.3368 1.1428 15.0104C0.787345 14.684 0.609619 14.2917 0.609619 13.8333V6.33332C0.609619 6.06943 0.673903 5.81943 0.80247 5.58332C0.931038 5.34721 1.10876 5.15277 1.33565 4.99999L6.78085 1.24999C7.09849 1.02777 7.4615 0.916656 7.86989 0.916656C8.27828 0.916656 8.6413 1.02777 8.95893 1.24999L14.4041 4.99999C14.631 5.15277 14.8087 5.34721 14.9373 5.58332C15.0659 5.81943 15.1302 6.06943 15.1302 6.33332V13.8333C15.1302 14.2917 14.9524 14.684 14.597 15.0104C14.2415 15.3368 13.8142 15.5 13.3151 15.5H2.42469ZM2.42469 13.8333H13.3151V6.33332L7.86989 2.58332L2.42469 6.33332V13.8333Z" fill="#1C1B1F"/>
                             </svg>
                                 
-                            <span class="unit-text">{{element.name}}</span>
+                            <span class="unit-text">{{element.unidade}}</span>
                         </div>
                     </td>
                 </ng-container>
@@ -59,9 +59,12 @@
                     <th mat-header-cell *matHeaderCellDef>STATUS</th>
         
                     <td mat-cell *matCellDef="let element">
-                        <button type="button" class="button-display">
-                            <span class="status-text">Aberto</span>
-                            <div class="open"></div>
+                        <button (click)="setIsOpen()" type="button" class="button-display">
+                            <span class="status-text">
+                                @if(isOpen){Aberto}
+                                @else{Fechado}
+                            </span>
+                            <div [ngClass]="isOpen? 'open': 'close'"></div>
                         </button>
                     </td>
                 </ng-container>
