--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+$border-radius-value: 0.8rem;
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-html, body { height: 100%; }
-body { 
-    margin: 0; 
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
+
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
 }
