--- a/src/app/pages/unidade/unidade.component.scss
+++ b/src/app/pages/unidade/unidade.component.scss
@@ -2,60 +2,73 @@
 $border-radius-value: 1.5rem;
 
 //Tags
+main {
+    display: flex;
+    width: 100dvw;
+}
 
-header{
+header {
     display: flex;
     align-items: center;
-    font-size:  small;
+    font-size: small;
     font-weight: bold;
     margin-bottom: 0.5rem
 }
 
-th{
+th {
     text-align: center;
 }
 
-td>*{
+td>* {
     background-color: #FFFFFF;
     padding: 0.6rem;
     margin: 0 1rem;
     border-radius: 0.8rem;
 }
 
-th, td{
+th,
+td {
     padding: 1rem 0.2rem;
     font-weight: 600;
     border: none !important;
 }
 
-a{
+a {
     text-decoration: none;
     color: black;
     cursor: pointer;
 }
 
 //Classes
+.main-content {
+    padding: 1.5rem;
+    width: 100%;
+}
 
-.filter{
+.links {
+    margin-left: 0.5rem;
+}
+
+.filter {
     padding: 1.5rem;
     background-color: #E5E5E5;
     border-radius: $border-radius-value;
 }
 
-.separate{
+.separate {
     margin: 0.5rem 0 2.5rem;
 }
 
-.filter>*{
+.filter>* {
     margin-top: 0.75rem;
 }
 
-.filter-title{
+.filter-title {
     margin: 0 0.75rem;
     font-weight: bold;
 }
 
-.filter-search-bar{
+.filter-search-bar {
     display: flex;
     flex: 1 1 0%;
     align-items: center;
@@ -64,11 +77,11 @@ a{
     border-radius: 1rem;
 }
 
-.filter-search-bar>*{
+.filter-search-bar>* {
     margin-left: 0.5rem;
 }
 
-.filter-input-search{
+.filter-input-search {
     display: flex;
     flex: 1 1 0%;
     overflow: hidden;
@@ -81,52 +94,56 @@ a{
 
 .table-container {
     border-radius: $border-radius-value;
-    overflow: hidden; /* Isso garante que os cantos arredondados não sejam cortados */
+    overflow: hidden;
+    /* Isso garante que os cantos arredondados não sejam cortados */
     position: relative;
-  
+
     table {
         background-color: #E5E5E5;
-        overflow-y: auto; /* Aplica o scroll vertical na tabela */
-        max-height: 100%; /* Faz com que a tabela respeite a altura do container */
-        width: 100%; /* Para garantir que ela se expanda corretamente */
+        overflow-y: auto;
+        /* Aplica o scroll vertical na tabela */
+        max-height: 100%;
+        /* Faz com que a tabela respeite a altura do container */
+        width: 100%;
+        /* Para garantir que ela se expanda corretamente */
     }
 }
-  
 
-.mat-column-distritos{
+
+.mat-column-distritos {
     align-items: center;
     text-align: center;
 }
 
-.unit-element{
+.unit-element {
     margin: 0 !important;
     width: 100%;
 }
 
-.unit-text{
+.unit-text {
     padding: 0 1rem;
 }
 
-.mat-column-boletim{
+.mat-column-boletim {
     text-align: center;
     margin: 0;
 
-    .tuberculose:hover{
+    .tuberculose:hover {
         background-color: purple;
         color: white;
     }
 
-    .hanseniase:hover{
+    .hanseniase:hover {
         background-color: red;
         color: white;
     }
 }
 
-.mat-column-status{
+.mat-column-status {
     justify-items: center;
 }
 
-.button-display{
+.button-display {
     display: flex;
     align-items: center;
     padding: 0 !important;
@@ -135,51 +152,23 @@ a{
     cursor: pointer;
 }
 
-.status-text{
+.status-text {
     padding: 0.5rem 1.5rem;
     font-weight: 600;
 }
 
-@mixin status{
+@mixin status {
     width: 1.6rem;
     height: 2.4rem;
     max-height: 100%;
 }
 
-.open{
+.open {
     @include status;
     background-color: #8FBF88;
 }
 
-.close{
+.close {
     @include status;
     background-color: #FA4F46;
 }
-
-/*.units{
-    display: grid;
-    grid-auto-flow: column;
-    overflow-y: auto;
-    padding: 1rem;
-    background-color: #E5E5E5;
-    border-radius: $border-radius-value;
-}
-
-.units-column{
-    display: grid;
-    grid-auto-flow: row;
-    //row-gap: 0.25rem;
-    text-align: center;
-}
-
-.units-column *{
-    margin-top: 0.5rem;
-}
-
-.units-column-title{
-    font-weight: bold;
-}
-
-.units-element{
-    background-color: white;
-}*/
