--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -5,8 +5,9 @@ aside {
   flex-direction: column;
   justify-content: space-between;
   background-color: #f3f3f3;
-  width: 15dvw;
-  height: 100dvh;
+  width: 15vw;
+  max-width: 250px;
+  height: 100vh;
   padding: 1.5rem 1.2rem 3rem;
   border-bottom-right-radius: 2rem;
 
@@ -65,12 +66,12 @@ button {
 .button-link-black {
   @include button-link;
   color: black;
-  justify-content: flex-start; 
+  justify-content: flex-start;
   gap: 0.5rem;
 
   .arrow {
-    margin-left: auto; 
-    font-size: 1rem; 
+    margin-left: auto;
+    font-size: 1rem;
     transition: transform 0.3s ease;
   }
 
@@ -106,5 +107,24 @@ button {
   &.open .submenu {
     max-height: 150px;
     opacity: 1;
+  }
+}
+
+// Responsividade para sidebar
+@media (max-width: 768px) {
+  aside {
+    width: 100%;
+    max-width: none;
+    height: auto;
+    padding: 1rem;
+  }
+
+  header .title {
+    font-size: large;
+  }
+
+  .button-link-black, .button-link-gray {
+    padding: 0.5rem;
+    font-size: 0.875rem;
   }
 }
