--- a/src/app/pages/formulario/formulario.component.scss
+++ b/src/app/pages/formulario/formulario.component.scss
@@ -5,7 +5,7 @@ $sidebar-width: 200px;
 .main-container {
   display: flex;
   height: 100vh;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 app-sidebar {
@@ -15,49 +15,101 @@ app-sidebar {
   flex-shrink: 0;
 }
 
-.formulario-container {
+.form-content {
   flex-grow: 1;
-  padding: 20px;
+  padding: 15px;
+}
+
+.form-header {
+  margin-bottom: 8px;
+
+  h2 {
+    font-size: 1rem;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 0.2rem;
+  }
+
+  p {
+    font-size: 0.8rem;
+    font-weight: bold;
+    color: #555;
+    margin: 0.1rem 0;
+  }
+}
+
+.formulario-container {
+  padding: 0.8rem;
   background-color: $background-light;
-  border-radius: 12px;
-  margin: 10px 10px 10px calc(#{$sidebar-width} - 150px);
+  border-radius: 10px;
+  margin-top: 8px;
   display: flex;
   flex-direction: column;
-  overflow-x: auto;
 
-  .form-header {
-    margin-bottom: 20px;
+  .filter {
+    display: flex;
+    align-items: center;
+    background-color: #e5e5e5;
+    padding: 0.4rem;
+    border-radius: $border-radius-value;
+    font-size: 0.65rem;
+    margin-bottom: 0.4rem;
 
-    h2 {
-      font-size: 1.8rem;
+    .filter-title {
+      margin-right: 0.8rem;
       font-weight: bold;
       color: #333;
     }
 
-    p {
-      font-size: 1rem;
-      font-weight: bold;
-      color: #555;
+    .filter-search-bar {
+      display: flex;
+      align-items: center;
+      flex-grow: 1;
+      background-color: white;
+      border-radius: 0.5rem;
+      padding: 0.2rem;
+
+      .search-icon {
+        width: 0.8rem;
+        height: 0.8rem;
+        margin-right: 0.2rem;
+      }
+
+      .filter-input-search {
+        flex-grow: 1;
+        border: none;
+        outline: none;
+        font-size: 0.7rem;
+        color: #333;
+      }
     }
   }
 
   .table-responsive {
-    overflow-x: auto;
+    overflow: hidden;
     border-radius: $border-radius-value;
     background-color: #ffffff;
-    padding: 1rem;
+    padding: 0.5rem;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+
+    .table-wrapper {
+      overflow-x: auto;
+      overflow-y: hidden;
+    }
 
     table {
       width: 100%;
+      min-width: 1000px;
       border-collapse: collapse;
       background-color: #ffffff;
 
       th,
       td {
-        padding: 0.8rem;
+        padding: 0.4rem;
         border: 1px solid #ffffff;
-        font-size: 14px;
+        font-size: 0.7rem;
         text-align: center;
         font-weight: bold;
         background-color: #e0e0e0;
@@ -71,79 +123,30 @@ app-sidebar {
         z-index: 1;
       }
 
+
       th.fixed,
       td.fixed {
         position: sticky;
         left: 0;
         background-color: #f5f5f5;
         z-index: 2;
-        min-width: 150px; 
-        max-width: none; 
-        white-space: nowrap; 
+        min-width: 100px;
       }
 
       th.fixed:nth-child(2),
       td.fixed:nth-child(2) {
-        left: 150px;
-        min-width: 150px;
-        max-width: none;
+        left: 100px;
       }
 
       th.fixed:nth-child(3),
       td.fixed:nth-child(3) {
-        left: 300px;
-        min-width: 200px;
-        max-width: none;
-      }
-
-      .select-cell {
-        background-color: #e0e0e0;
-        border-radius: 8px;
-        padding: 4px 8px;
-
-        select {
-          width: 100%;
-          padding: 6px;
-          border-radius: 4px;
-          border: 1px solid #ccc;
-          font-size: 14px;
-          background-color: white;
-          color: #333;
-          cursor: pointer;
-
-          &:focus {
-            outline: none;
-            border-color: #007bff;
-          }
-        }
+        left: 200px; 
       }
     }
+  }
 
-    &::-webkit-scrollbar {
-      height: 50px;
-      width: 5px;
-      border-radius: 1.5rem;
-    }
-
-    &::-webkit-scrollbar-track {
-      background: #f0f0f0;
-      border-radius: 1.5rem;
-      margin: 0 5px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background-color: #b0b0b0;
-      border-radius: 1.5rem;
-      border: 3px solid #f0f0f0;
-    }
-
-    &::-webkit-scrollbar-thumb:hover {
-      background-color: #909090;
-    }
-
-    /* Para Firefox */
-    scrollbar-color: #b0b0b0 #f0f0f0;
-    scrollbar-width: thin;
+  mat-paginator {
+    margin-top: 10px;
   }
 }
 
@@ -153,12 +156,15 @@ app-sidebar {
     min-width: 100%;
   }
 
+  .form-content {
+    padding: 8px;
+  }
+
   .formulario-container {
-    width: 100%;
-    margin: 10px;
+    margin: 8px 0;
   }
 
   .table-responsive {
-    padding: 0.5rem;
+    padding: 0.4rem;
   }
 }
