--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -2,39 +2,40 @@
   <app-sidebar></app-sidebar>
 
   <div class="main-content">
+    <app-breadcrumb></app-breadcrumb>
     <header>
-      <svg width="11" height="12" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-      </svg>
-      <span class="links">Usuários</span>
+      <h2>Usuários</h2>
     </header>
 
     <section class="filter separate">
       <span class="filter-title">FILTROS</span>
       <form action="" method="post" class="filter-search-bar">
-        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-        </svg>
-        <input type="text" placeholder="Buscar..." class="filter-input-search" (input)="applyFilter($event)">
+        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"></svg>
+        <input type="text" placeholder="Buscar..." class="filter-input-search" (input)="applyFilter($event)" />
       </form>
     </section>
 
     <div class="table-container">
       <table mat-table [dataSource]="dataSource">
-
+        <!-- Nome Column -->
         <ng-container matColumnDef="nome">
           <th mat-header-cell *matHeaderCellDef>NOME</th>
           <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
         </ng-container>
 
+        <!-- Email Column -->
         <ng-container matColumnDef="email">
           <th mat-header-cell *matHeaderCellDef>EMAIL</th>
           <td mat-cell *matCellDef="let element">{{ element.email }}</td>
         </ng-container>
 
-        <ng-container matColumnDef="cpf" class="hidden-column">
-          <th mat-header-cell *matHeaderCellDef>CPF</th>
-          <td mat-cell *matCellDef="let element">{{ element.cpf }}</td>
+        <!-- CPF Column (Hidden) -->
+        <ng-container matColumnDef="cpf">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element" class="hidden-column">{{ element.cpf }}</td>
         </ng-container>
 
+        <!-- Actions Column -->
         <ng-container matColumnDef="acoes">
           <th mat-header-cell *matHeaderCellDef>AÇÕES</th>
           <td mat-cell *matCellDef="let element">
@@ -55,6 +56,7 @@
     </div>
   </div>
 
+  <!-- View Modal -->
   <div *ngIf="viewModalOpen" class="modal">
     <div class="modal-content">
       <h3>Permissões de {{ selectedUser?.nome }}</h3>
@@ -65,12 +67,13 @@
     </div>
   </div>
 
+  <!-- Edit Modal -->
   <div *ngIf="editModalOpen" class="modal">
     <div class="modal-content">
       <h3>Editando Permissões de {{ selectedUser?.nome }}</h3>
       <div *ngFor="let permission of allPermissions">
         <label>
-          <input type="checkbox" [checked]="isPermissionSelected(permission.permission_id)" (change)="togglePermission(permission.permission_id)">
+          <input type="checkbox" [checked]="isPermissionSelected(permission.permission_id)" (change)="togglePermission(permission.permission_id)" />
           {{ permission.permission_name }}
         </label>
       </div>
