--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,69 @@ body {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
 }
+
+.table-container mat-paginator {
+  background-color: transparent;
+  padding: 0.1rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.3rem;
+
+  .mat-paginator-range-label {
+    font-size: 0.75rem;
+    color: #333;
+    font-weight: 400;
+    margin: 0;
+  }
+
+  .mat-paginator-page-size {
+    font-size: 0.75rem;
+    color: #333;
+    font-weight: 400;
+    margin: 0 0.2rem;
+  }
+
+  .mat-icon-button {
+    color: #333;
+    font-size: 0.9rem;
+    width: 1.2rem;
+    height: 1.2rem;
+    padding: 0.1rem;
+
+    &:hover {
+      background-color: transparent;
+    }
+  }
+
+  .mat-select {
+    font-size: 0.75rem;
+    min-width: 2.5rem;
+    height: 1.5rem;
+    color: #333;
+    padding: 0 0.2rem;
+    border: 1px solid #ccc;
+    border-radius: 0.3rem;
+
+    .mat-select-arrow {
+      font-size: 0.6rem;
+      color: #333;
+    }
+
+    &:focus,
+    &:hover {
+      border-color: #666;
+      box-shadow: none;
+    }
+  }
+
+  .mat-form-field {
+    background-color: transparent;
+    margin: 0;
+  }
+
+  .mat-select-panel {
+    min-width: 3rem;
+    border-radius: 0.3rem;
+  }
+}
