--- a/src/app/pages/boletins/boletins/boletins.component.html
+++ b/src/app/pages/boletins/boletins/boletins.component.html
@@ -66,7 +66,7 @@
 
         <td mat-cell *matCellDef="let element">
           <div class="acessar">
-            <a routerLink="">Acessar</a>
+            <a routerLink="/formulario">Acessar</a>
           </div>
         </td>
       </ng-container>
