--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,7 +19,7 @@ body {
 
 /* Estilos personalizados para o diálogo */
 .custom-dialog-container {
-    border-radius: 2.5rem;
+    border-radius: 1rem;
     background-color: #E5E5E5;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  }
+    //box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
