--- a/src/app/pages/overlay-form/overlay-form.component.html
+++ b/src/app/pages/overlay-form/overlay-form.component.html
@@ -4,48 +4,56 @@
 
         <div class="overlay-header-data">
             <div class="data">
-                <span>DISTRITO SANITÁRIO 1</span>
+                <span class="bold">DISTRITO SANITÁRIO 1</span>
 
-                <span>MÊS: AGOSTO </span>
+                <span class="bold">MÊS: <span>AGOSTO</span> </span>
 
-                <span>UNIDADE DE SAÚDE: US 128 POLICLINICA LESSA DE ANDRADE</span>
+                <span class="bold">UNIDADE DE SAÚDE: <span>US 128 POLICLINICA LESSA DE ANDRADE</span> </span>
             </div>
 
             <div class="data">
-                <span>N° DA NOTIFICAÇÃO ATUAL: 777777</span>
+                <span class="bold">N° DA NOTIFICAÇÃO ATUAL: <span> 777777 </span> </span>
 
-                <span>DATA DA NOTIFICAÇÃO ATUAL: DD/MM/AAAA</span>
+                <span class="bold">DATA DA NOTIFICAÇÃO ATUAL: <span> DD/MM/AAAA </span> </span>
 
-                <span>NOME: MARCIA DOS SANTOS FERREIRA</span>
+                <span class="bold">NOME: <span> MARCIA DOS SANTOS FERREIRA </span> </span>
             </div>
         </div>
     </section>
     
-    <section>
+    <section class="overlay-main">
         <div>
-            <div>
-                <span>Forma</span>
+            <div class="overlay-main-info">
+                <span class="title">Forma</span>
                 <span>1</span>
             </div>
         </div>
 
-        <div>
-            @for(column of displayedColumns; track column.nome){
-                <div>
-                    <span>{{column.nome}}</span>
-                    <select name="{{column.nome}}" id="{{column.nome}}">
-                        <option value=""></option>
+        <div class="overlay-main-grid">
+            @for(column of displayedGridColumns; track column.nome){
+                <div class="overlay-main-info">
+                    <span class="title">{{column.nome}}</span>
+                    <select name="{{column.nome}}" id="{{column.nome}}" [value]="null">
+                        <option value="null">-</option>
                     </select>
                 </div>
             }
         </div>
     </section>
     
-    <section>
-        <h1>Teste três</h1>
+    <section class="overlay-comments">
+        <div>
+            <label for="distrito">Obs. Distrito</label>
+            <textarea name="Obs. Distrito" id="distrito"></textarea>
+        </div>
+
+        <div>
+            <label for="unidade">Obs. Unidade</label>
+            <textarea name="Obs. Unidade" id="unidade"></textarea>
+        </div>
     </section>
 
-    <section>
+    <section class=overlay-buttons>
         <button type="submit">
             <svg width="15" height="11" viewBox="0 0 15 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M13.2792 0.975098L5.12505 8.7001L1.72088 5.4751L0.612549 6.5251L4.57088 10.2751L5.12505 10.8001L5.67922 10.2751L14.3876 2.0251L13.2792 0.975098Z" fill="#1C1B1F"/>
@@ -59,7 +67,6 @@
                 <path d="M1 10.0704L12.9384 1" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M1 1L12.9384 10.0704" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-                
             
             <span>Fechar</span>
         </button>
