--- a/src/app/pages/overlay-form/overlay-form.component.scss
+++ b/src/app/pages/overlay-form/overlay-form.component.scss
@@ -1,12 +1,21 @@
+// Variables
+$color-gray-info: #D9D9D9;
+
 form{
     width: 100%;
     height: 100%;
-    padding: 1rem;
+    padding: 0.75rem;
     background-color: #E5E5E5;
+    border: 2px solid black;
+    border-radius: 0.5rem;
+    //box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.5); /* inner shadow */
+
+    >*{
+        padding: 0.5rem 0;
+    }
 }
 
 .overlay-header{
-    padding: 0.5rem 0;
 
     .overlay-header-title{
         font-size: larger;
@@ -15,16 +24,126 @@ form{
 
     .overlay-header-data{
         display: flex;
+        margin-right: 3rem;
         padding: 0.5rem 0;
+        justify-content: space-between;
 
         .data{
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
 
             *{
                 margin-top: 0.25rem;
             }
+
+            .bold{
+                font-weight: bold;
+
+                *{
+                    font-weight: 400;
+                }
+            }
         }
     }
+}
+
+.overlay-main{
+    display: flex;
+    padding: 0 2.5rem 0 1.5rem;
+
+    >*{
+        margin-right: 0.5rem;
+    }
+
+    .overlay-main-info{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        text-wrap: wrap;
+        align-items: center;
+
+        >*{
+            margin-top: 0.5rem;
+        }
+
+        .title{
+            font-weight: bold;
+        }
+
+        select{
+            padding: 0.25rem 2.25rem;
+            border: none;
+            border-radius: 1.5rem;
+            background-color: $color-gray-info;
+        }
+    }
+
+    .overlay-main-grid{
+        display: grid;
+        grid-template-columns: repeat(7, 1fr);
+        row-gap: 0.5rem;
+        column-gap: 0.25rem;
+    }
+}
+
+.overlay-comments{
+    display: flex;
+    justify-content: center;
+
+    >*{
+        margin-right: 1.5rem;
+    }
+
+    label{
+        display: block;
+        margin-bottom: 0.4rem;
+        margin-left: 0.4rem;
+        font-weight: bold;
+    }
+
+    textarea{
+        width: 24rem;
+        height: 10rem;
+        padding: 0.4rem;
+        overflow-y: auto;
+        border: none;
+        border-radius: 1rem;
+    }
+}
+
+.overlay-buttons{
+    display: flex;
+    justify-content: center;
+
+    button{
+        margin-right: 1.75rem;
+        padding: 0.35rem 0.75rem;
+        background-color: #FFFFFF;
+        font-weight: bold;
+        border: none;
+        border-radius: 1.5rem;
+
+        >*{
+            margin-right: 0.5rem;
+        }
+    }
+
+    button:hover{
+        cursor: pointer;
+        opacity: 0.6;
+    }
+
+    /*button:first-child:hover{
+        color: white;
+        stroke: white !important;
+        fill: white !important;
+        background-color: green;
+    }
+
+    button:last-child:hover{
+        color: white;
+        stroke: white !important;
+        fill: white !important;
+        background-color: red;
+    }*/
 }
