--- a/src/app/pages/formulario/formulario.component.html
+++ b/src/app/pages/formulario/formulario.component.html
@@ -19,7 +19,12 @@
               fill="#1C1B1F"
             />
           </svg>
-          <input type="text" placeholder="Buscar..." class="filter-input-search" (input)="applyFilter($event)" />
+          <input
+            type="text"
+            placeholder="Buscar..."
+            class="filter-input-search"
+            (input)="applyFilter($event)"
+          />
         </form>
       </section>
 
@@ -27,11 +32,19 @@
         <div class="table-wrapper" #tableWrapper>
           <table mat-table [dataSource]="dataSource">
             <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
-              <th mat-header-cell *matHeaderCellDef>{{ columnLabels[column] || column | titlecase }}</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element[column] || "-" }}
+              <th mat-header-cell *matHeaderCellDef>
+                {{ columnLabels[column] || column | uppercase }}
+              </th>
+              <td
+                mat-cell
+                *matCellDef="let element"
+                (click)="column === 'no_nome_paciente' ? openOverlay(element) : null"
+                [ngClass]="{'clickable-cell': column === 'no_nome_paciente'}"
+              >
+                {{ element[column] || '-' }}
               </td>
             </ng-container>
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
           </table>
