--- a/src/app/pages/formulario/formulario.component.scss
+++ b/src/app/pages/formulario/formulario.component.scss
@@ -1,170 +1,256 @@
+$color-gray-info: #D9D9D9;
 $border-radius-value: 1.5rem;
 $background-light: #e0e0e0;
 $sidebar-width: 200px;
 
+/* Estilos globais */
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+}
+
+/* Main container */
 .main-container {
-  display: flex;
-  height: 100vh;
-  overflow-y: hidden;
+    display: flex;
+    height: 100vh;
+    overflow: hidden;
 }
 
 app-sidebar {
-  width: $sidebar-width;
-  background-color: #f1f1f1;
-  z-index: 10;
-  flex-shrink: 0;
+    width: $sidebar-width;
+    background-color: #f1f1f1;
+    z-index: 10;
+    flex-shrink: 0;
 }
 
 .form-content {
-  flex-grow: 1;
-  padding: 15px;
+    flex-grow: 1;
+    padding: 15px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 .form-header {
-  margin-bottom: 8px;
+    margin-bottom: 8px;
 
-  h2 {
-    font-size: 1rem;
-    font-weight: bold;
-    color: #333;
-    margin-bottom: 0.2rem;
-  }
+    h2 {
+        font-size: 1rem;
+        font-weight: bold;
+        color: #333;
+        margin-bottom: 0.2rem;
+    }
 
-  p {
-    font-size: 0.8rem;
-    font-weight: bold;
-    color: #555;
-    margin: 0.1rem 0;
-  }
+    p {
+        font-size: 0.8rem;
+        font-weight: bold;
+        color: #555;
+        margin: 0.1rem 0;
+    }
 }
 
 .formulario-container {
-  padding: 0.8rem;
-  background-color: $background-light;
-  border-radius: 10px;
-  margin-top: 8px;
-  display: flex;
-  flex-direction: column;
-
-  .filter {
-    display: flex;
-    align-items: center;
-    background-color: #e5e5e5;
-    padding: 0.4rem;
-    border-radius: $border-radius-value;
-    font-size: 0.65rem;
-    margin-bottom: 0.4rem;
-
-    .filter-title {
-      margin-right: 0.8rem;
-      font-weight: bold;
-      color: #333;
-    }
-
-    .filter-search-bar {
-      display: flex;
-      align-items: center;
-      flex-grow: 1;
-      background-color: white;
-      border-radius: 0.5rem;
-      padding: 0.2rem;
-
-      .search-icon {
-        width: 0.8rem;
-        height: 0.8rem;
-        margin-right: 0.2rem;
-      }
-
-      .filter-input-search {
-        flex-grow: 1;
-        border: none;
-        outline: none;
-        font-size: 0.7rem;
-        color: #333;
-      }
-    }
-  }
-
-  .table-responsive {
-    overflow: hidden;
-    border-radius: $border-radius-value;
-    background-color: #ffffff;
-    padding: 0.5rem;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    flex-grow: 1;
+    padding: 0.8rem;
+    background-color: $background-light;
+    border-radius: 10px;
+    margin-top: 8px;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 
-    .table-wrapper {
-      overflow-x: auto;
-      overflow-y: hidden;
-    }
-
-    table {
-      width: 100%;
-      min-width: 1000px;
-      border-collapse: collapse;
-      background-color: #ffffff;
-
-      th,
-      td {
+    .filter {
+        display: flex;
+        align-items: center;
+        background-color: #e5e5e5;
         padding: 0.4rem;
-        border: 1px solid #ffffff;
-        font-size: 0.7rem;
-        text-align: center;
-        font-weight: bold;
-        background-color: #e0e0e0;
-        white-space: nowrap;
-      }
+        border-radius: $border-radius-value;
+        font-size: 0.65rem;
+        margin-bottom: 0.4rem;
 
-      th {
-        background-color: #f5f5f5;
-        position: sticky;
-        top: 0;
-        z-index: 1;
-      }
+        .filter-title {
+            margin-right: 0.8rem;
+            font-weight: bold;
+            color: #333;
+        }
 
+        .filter-search-bar {
+            display: flex;
+            align-items: center;
+            flex-grow: 1;
+            background-color: white;
+            border-radius: 0.5rem;
+            padding: 0.2rem;
 
-      th.fixed,
-      td.fixed {
-        position: sticky;
-        left: 0;
-        background-color: #f5f5f5;
-        z-index: 2;
-        min-width: 100px;
-      }
+            .search-icon {
+                width: 0.8rem;
+                height: 0.8rem;
+                margin-right: 0.2rem;
+            }
 
-      th.fixed:nth-child(2),
-      td.fixed:nth-child(2) {
-        left: 100px;
-      }
-
-      th.fixed:nth-child(3),
-      td.fixed:nth-child(3) {
-        left: 200px; 
-      }
+            .filter-input-search {
+                flex-grow: 1;
+                border: none;
+                outline: none;
+                font-size: 0.7rem;
+                color: #333;
+            }
+        }
     }
-  }
 
-  mat-paginator {
-    margin-top: 10px;
-  }
+    .table-responsive {
+        flex-grow: 1;
+        overflow: hidden;
+        border-radius: $border-radius-value;
+        background-color: #ffffff;
+        padding: 0.5rem;
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+        display: flex;
+        flex-direction: column;
+
+        .table-wrapper {
+            overflow: auto;
+            flex-grow: 1;
+
+            &::-webkit-scrollbar {
+                width: 10px;
+                height: 10px;
+            }
+
+            &::-webkit-scrollbar-track {
+                background: #f1f1f1;
+                border-radius: 5px;
+            }
+
+            &::-webkit-scrollbar-thumb {
+                background-color: #888;
+                border-radius: 5px;
+                border: 2px solid #f1f1f1;
+            }
+
+            &::-webkit-scrollbar-thumb:hover {
+                background-color: #555;
+            }
+        }
+
+        table {
+            width: 100%;
+            min-width: 1000px;
+            border-collapse: collapse;
+            background-color: #ffffff;
+            
+
+            th,
+            td {
+                padding: 0.4rem;
+                border: 1px solid #ffffff;
+                font-size: 0.7rem;
+                text-align: center;
+                font-family: 'Roboto', sans-serif;
+                background-color: #e0e0e0;
+                white-space: nowrap;
+                
+            }
+
+            th {
+                background-color: #f5f5f5;
+                font-weight: bold;
+                position: sticky;
+                top: 0;
+                z-index: 5;
+            }
+
+            td {
+                z-index: 1;
+            }
+
+            /* Fixando os cabeçalhos e células das três primeiras colunas */
+            th:nth-child(1),
+            td:nth-child(1) {
+                position: sticky;
+                left: 0;
+                z-index: 4;
+            }
+
+            th:nth-child(2),
+            td:nth-child(2) {
+                position: sticky;
+                left: 150px;
+                z-index: 4;
+            }
+
+            th:nth-child(3),
+            td:nth-child(3) {
+                position: sticky;
+                left: 300px;
+                z-index: 4;
+            }
+
+            th:nth-child(1) {
+                z-index: 6;
+            }
+
+            th:nth-child(2) {
+                z-index: 6;
+            }
+
+            th:nth-child(3) {
+                z-index: 6;
+            }
+        }
+    }
+
+    mat-paginator {
+        margin-top: 10px;
+    }
+}
+
+.clickable-cell {
+    cursor: pointer;
+    text-decoration: underline;
+    color: blue;
+}
+
+.main-container::-webkit-scrollbar {
+    width: 10px;
+}
+
+.main-container::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 5px;
+}
+
+.main-container::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 5px;
+    border: 2px solid #f1f1f1;
+}
+
+.main-container::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
 }
 
 @media (max-width: 768px) {
-  app-sidebar {
-    width: 100%;
-    min-width: 100%;
-  }
+    app-sidebar {
+        width: 100%;
+        min-width: 100%;
+    }
 
-  .form-content {
-    padding: 8px;
-  }
+    .form-content {
+        padding: 8px;
+    }
 
-  .formulario-container {
-    margin: 8px 0;
-  }
+    .formulario-container {
+        margin: 8px 0;
+    }
 
-  .table-responsive {
-    padding: 0.4rem;
-  }
+    .table-responsive {
+        padding: 0.4rem;
+    }
 }
