--- a/src/app/pages/formulario/formulario.component.html
+++ b/src/app/pages/formulario/formulario.component.html
@@ -10,22 +10,42 @@
       <p>UNIDADE DE SAÚDE: {{ unidade }}</p>
     </div>
     <div class="formulario-container">
+      <div class="modal-overlay" *ngIf="alertaModalVisivel">
+        <div class="modal-container">
+          <h2>Pacientes Pendentes</h2>
+          <p>
+            O paciente <strong>{{ nomePrimeiroPaciente }}</strong>
+            <span *ngIf="outrosPacientesPendentes"> e outros pacientes</span>
+            <span>{{ isApenasUmPaciente ? ' está' : ' estão' }}</span>
+            com a resposta da unidade pendente.
+          </p>
+          <div class="modal-actions">
+            <label>
+              <input type="checkbox" #ignorarHoje /> Não mostrar novamente hoje
+            </label>
+            <div class="modal-buttons">
+              <button mat-button (click)="verPendentes()">Ver Todos os Pendentes</button>
+              <button mat-button (click)="fecharAlerta(ignorarHoje.checked)">Fechar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <section class="filter">
         <span class="filter-title">FILTROS</span>
         <form action="" method="post" class="filter-search-bar">
           <svg class="search-icon" viewBox="0 0 16 16" fill="none">
             <path
               d="M5.91667 11.3333C4.40278 11.3333 3.12153 10.809 2.07292 9.76042C1.02431 8.71181 0.5 7.43056 0.5 5.91667C0.5 4.40278 1.02431 3.12153 2.07292 2.07292C3.12153 1.02431 4.40278 0.5 5.91667 0.5C7.43056 0.5 8.71181 1.02431 9.76042 2.07292C10.809 3.12153 11.3333 4.40278 11.3333 5.91667C11.3333 6.52778 11.2361 7.10417 11.0417 7.64583C10.8472 8.1875 10.5833 8.66667 10.25 9.08333L14.9167 13.75C15.0694 13.9028 15.1458 14.0972 15.1458 14.3333C15.1458 14.5694 15.0694 14.7639 14.9167 14.9167C14.7639 15.0694 14.5694 15.1458 14.3333 15.1458C14.0972 15.1458 13.9028 15.0694 13.75 14.9167L9.08333 10.25C8.66667 10.5833 8.1875 10.8472 7.64583 11.0417C7.10417 11.2361 6.52778 11.3333 5.91667 11.3333ZM5.91667 9.66667C6.95833 9.66667 7.84375 9.30208 8.57292 8.57292C9.30208 7.84375 9.66667 6.95833 9.66667 5.91667C9.66667 4.875 9.30208 3.98958 8.57292 3.26042C7.84375 2.53125 6.95833 2.16667 5.91667 2.16667C4.875 2.16667 3.98958 2.53125 3.26042 3.26042C2.53125 3.98958 2.16667 4.875 2.16667 5.91667C2.16667 6.95833 2.53125 7.84375 3.26042 8.57292C3.98958 9.30208 4.875 9.66667 5.91667 9.66667Z"
-              fill="#1C1B1F"
-            />
+              fill="#1C1B1F" />
           </svg>
-          <input
-            type="text"
-            placeholder="Buscar..."
-            class="filter-input-search"
-            (input)="applyFilter($event)"
-          />
+          <input type="text" placeholder="Buscar..." class="filter-input-search" (input)="applyFilter($event)" />
         </form>
+        <button mat-button class="filter-button"
+          [ngClass]="{'visible': dataSource.filter === 'pendentes', 'hidden': dataSource.filter !== 'pendentes'}"
+          (click)="resetFiltro()">
+          Mostrar Todos
+        </button>
       </section>
 
       <div class="table-responsive">
@@ -35,18 +55,17 @@
               <th mat-header-cell *matHeaderCellDef>
                 {{ columnLabels[column] || column | uppercase }}
               </th>
-              <td
-                mat-cell
-                *matCellDef="let element"
-                (click)="column === 'no_nome_paciente' ? openOverlay(element) : null"
-                [ngClass]="{'clickable-cell': column === 'no_nome_paciente'}"
-              >
-                {{ element[column] || '-' }}
+              <td mat-cell *matCellDef="let element"
+                (click)="column === 'no_nome_paciente' ? openOverlay(element) : null" [ngClass]="{
+                  'clickable-cell': column === 'no_nome_paciente',
+                  'highlight-distrito': column === 'obs_distrito' && element.highlight
+                }">
+                {{ column === 'obs_unidade' ? element.display_obs_unidade || '-' : element[column] || '-' }}
               </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns" [ngClass]="getRowClass(row)"></tr>
           </table>
           <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
         </div>
