--- a/src/app/pages/formulario/formulario.component.scss
+++ b/src/app/pages/formulario/formulario.component.scss
@@ -4,11 +4,14 @@ $background-light: #e0e0e0;
 $sidebar-width: 200px;
 
 /* Estilos globais */
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     height: 100%;
@@ -68,18 +71,18 @@ app-sidebar {
     .filter {
         display: flex;
         align-items: center;
-        background-color: #e5e5e5;
+        justify-content: space-between; 
+        background-color: #e9ecef; 
         padding: 0.4rem;
         border-radius: $border-radius-value;
         font-size: 0.65rem;
         margin-bottom: 0.4rem;
-
+    
         .filter-title {
-            margin-right: 0.8rem;
             font-weight: bold;
             color: #333;
         }
-
+    
         .filter-search-bar {
             display: flex;
             align-items: center;
@@ -87,13 +90,13 @@ app-sidebar {
             background-color: white;
             border-radius: 0.5rem;
             padding: 0.2rem;
-
+    
             .search-icon {
                 width: 0.8rem;
                 height: 0.8rem;
                 margin-right: 0.2rem;
             }
-
+    
             .filter-input-search {
                 flex-grow: 1;
                 border: none;
@@ -144,7 +147,7 @@ app-sidebar {
             min-width: 1000px;
             border-collapse: collapse;
             background-color: #ffffff;
-            
+
 
             th,
             td {
@@ -155,7 +158,7 @@ app-sidebar {
                 font-family: 'Roboto', sans-serif;
                 background-color: #e0e0e0;
                 white-space: nowrap;
-                
+
             }
 
             th {
@@ -170,7 +173,6 @@ app-sidebar {
                 z-index: 1;
             }
 
-            /* Fixando os cabeçalhos e células das três primeiras colunas */
             th:nth-child(1),
             td:nth-child(1) {
                 position: sticky;
@@ -210,6 +212,136 @@ app-sidebar {
         margin-top: 10px;
     }
 }
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.modal-container {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    max-width: 300px;
+    text-align: center;
+}
+
+.modal-container h2 {
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+}
+
+.modal-container p {
+    font-size: 1rem;
+    margin-bottom: 20px;
+}
+
+.modal-actions {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 20px;
+
+    label {
+        font-size: 0.9rem;
+        margin-bottom: 10px;
+    }
+
+    .modal-buttons {
+        display: flex;
+        gap: 10px;
+        /* Espaçamento entre os botões */
+        margin-top: 10px;
+
+        button {
+            background-color: #ccccccda;
+            color: white;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #8b8b8b;
+        }
+    }
+}
+
+button {
+    background-color: #ccccccda;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #8b8b8b;
+}
+
+.highlight-distrito {
+    background-color: #fff9c4 !important;
+    font-weight: bold;
+}
+
+.pendentes-lista {
+    list-style-type: none;
+    padding: 0;
+    margin: 20px 0;
+    max-height: 150px;
+    overflow-y: auto;
+
+    li {
+        background-color: #fff9c4;
+        margin: 5px 0;
+        padding: 5px 10px;
+        border-radius: 4px;
+        font-size: 0.9rem;
+        font-weight: bold;
+        color: #333;
+    }
+
+    li:hover {
+        background-color: #ffe082;
+    }
+}
+
+.filter-button {
+    margin: 0; 
+    padding: 3px 10px;
+    font-size: 0.75rem;
+    background-color: #6c757d; 
+    color: white; 
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2); 
+
+    &:hover {
+        background-color: #5a6268; 
+    }
+
+    &.visible {
+        visibility: visible; 
+    }
+
+    &.hidden {
+        visibility: hidden; 
+    }
+}
+
 
 .clickable-cell {
     cursor: pointer;
