--- a/src/app/pages/overlay-form/overlay-form.component.scss
+++ b/src/app/pages/overlay-form/overlay-form.component.scss
@@ -1,17 +1,11 @@
-$color-gray-info: #eeff00;
-
-// *,
-// *::before,
-// *::after {
-//     box-sizing: border-box;
-// }
+$color-gray-info: #dddddda6;
 
 html,
 body {
     margin: 0;
     padding: 0;
-    height: 100%;
     width: 100%;
+    height: 100%;
 }
 
 .container-overlay {
@@ -47,20 +41,31 @@ body {
     }
 }
 
+.mdc-dialog__surface {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    // overflow-y: auto;
+    max-height: 90vh;
+    padding: 0;
+    overflow: hidden;
+    box-sizing: border-box;
+}
+
 form {
     width: 100%;
     max-width: 1200px;
-    max-height: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-height: calc(90vh - 2rem);
+    // overflow-y: auto; 
     padding: 1rem;
     background-color: #E5E5E5;
     border-radius: 0.5rem;
-    display: flex;
-    flex-direction: column;
-    overflow: auto;
-
-    >* {
-        margin-bottom: 0.5rem;
-    }
+    // overflow: hidden;
+    box-sizing: border-box;
 
     &::-webkit-scrollbar {
         width: 8px;
@@ -82,12 +87,10 @@ form {
 }
 
 .overlay-header {
-    margin-bottom: 0.5rem;
-    // background-color: red;
     flex-shrink: 0;
+    margin-bottom: 0.5rem;
 
     .overlay-header-title {
-        // background-color: black;
         font-size: 1rem;
         font-weight: bold;
         margin-bottom: 0.25rem;
@@ -102,7 +105,6 @@ form {
         padding: 0.5rem 0.25rem;
 
         .data {
-            // background-color: blueviolet;
             flex: 1 1 30%;
             display: flex;
             flex-direction: column;
@@ -115,119 +117,54 @@ form {
                 text-overflow: ellipsis;
             }
 
-            // .bold {
-            //     font-weight: bold;
-            // }
-
             &:last-child {
                 text-align: end;
             }
         }
-
-        // .data:last-child {
-
-        // }
     }
 }
 
 .overlay-main {
-    flex-grow: 1;
     display: grid;
+    grid-auto-flow: dense;
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    gap: 0.5rem;
-    overflow: auto;
-
-    &::-webkit-scrollbar {
-        width: 8px;
-    }
-
-    &::-webkit-scrollbar-track {
-        background: #ddd;
-    }
-
-    &::-webkit-scrollbar-thumb {
-        background-color: #aaa;
-        border-radius: 4px;
-        border: 1px solid #ddd;
-    }
-
-    &::-webkit-scrollbar-thumb:hover {
-        background-color: #888;
-    }
+    // gap: 0rem;
+    align-items: center;
+    row-gap: 0.3rem;
 
     .overlay-main-info {
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: auto;
 
         .title {
             font-weight: bold;
-            font-size: 0.8rem;
-            margin-bottom: 0.2rem;
-            background-color: blue;
+            font-size: 0.6rem;
+            margin-bottom: 0.1rem;
             text-align: center;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
+            white-space: nowrap; /* Evita que o texto quebre a linha */
+            overflow: hidden; /* Oculta o excesso de texto */
+            text-overflow: ellipsis; /* Adiciona "..." no final do texto */
+            width: 100%; /* Garante alinhamento e simetria */
+            display: inline-block; /* Necessário para aplicar as propriedades */
         }
 
         select,
         input[type="text"],
-        mat-form-field {
-            width: 100%;
-            height: 36px;
+        input[matDatepicker] {
+            width: 50%;
+            height: 34px;
             border: none;
             border-radius: 0.5rem;
             text-align: center;
             background-color: $color-gray-info;
-            font-size: 0.8rem;
+            font-size: 0.6rem;
             box-sizing: border-box;
-            
-        }
-
-        mat-form-field {
-            background-color: $color-gray-info;
-            display: flex;
-            align-items: center;
-            height: 36px;
-            border-radius: 0.5rem;
-            box-sizing: border-box;
-
-            .mat-form-field-wrapper {
-                padding: 0;
-                height: 100%;
-            }
-
-            .mat-form-field-flex {
-                height: 100%;
-                align-items: center;
-                border-radius: 0.5rem;
-                box-sizing: border-box;
-            }
-
-            .mat-input-element {
-                padding: 0.2rem 0.5rem;
-                font-size: 0.8rem;
-                border-radius: 0.5rem;
-                height: 100%;
-                background-color: transparent;
-                box-sizing: border-box;
-                min-width: 150px;
-                max-width: 250px;
-            }
-
-            .mat-form-field-underline {
-                display: none;
-            }
-
-            .mat-datepicker-toggle {
-                margin-right: 0.2rem;
-                display: flex;
-                align-items: center;
-
-                .mat-datepicker-toggle-default-icon {
-                    font-size: 1rem;
-                }
-            }
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
     }
 }
@@ -237,8 +174,7 @@ form {
     flex-wrap: wrap;
     justify-content: center;
     gap: 1rem;
-    margin-bottom: 0.5rem;
-    flex-shrink: 0;
+    padding: 1rem 0;
 
     .comment-field {
         display: flex;
@@ -250,19 +186,19 @@ form {
 
     label {
         display: block;
-        margin-bottom: 0.2rem;
+        margin-bottom: 0.4rem;
         font-weight: bold;
-        font-size: 0.8rem;
+        font-size: 0.6rem;
         text-align: center;
     }
 
     textarea {
-        width: 100%;
-        height: 4rem;
-        padding: 0.4rem;
+        width: 300px;
+        height: 6rem; 
+        padding: 0.6rem;
         border: none;
         border-radius: 0.5rem;
-        font-size: 0.8rem;
+        font-size: 0.7rem;
         resize: none;
         background-color: #FFFFFF;
         border: 1px solid #ccc;
@@ -271,11 +207,9 @@ form {
 
 .overlay-buttons {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     gap: 0.5rem;
-    margin-top: 0.5rem;
-    flex-shrink: 0;
+    margin-top: 1rem; 
 
     button {
         padding: 0.4rem 1rem;
@@ -300,4 +234,21 @@ form {
             background-color: #5a6268;
         }
     }
+}
+
+.tuberculose .overlay-comments textarea {
+    height: 6rem; 
+}
+
+.tuberculose .overlay-buttons {
+    margin-top: 1rem; 
+}
+
+
+.hanseniase .overlay-comments textarea {
+    height: 8rem; 
+}
+
+.hanseniase .overlay-buttons {
+    margin-top: 0.5rem; 
 }
