--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,3 +81,24 @@ body {
     border-radius: 0.3rem;
   }
 }
+
+input.mat-datepicker-input {
+  border: none !important; 
+  outline: none !important; 
+  box-shadow: none !important;
+  background-color: transparent; 
+}
+
+input.mat-datepicker-input:focus {
+  border: 1px solid #ccc !important; 
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+input.mat-datepicker-input.ng-invalid.ng-touched {
+  border: 1px solid #f00 !important;
+}
+
+.mat-form-field-appearance-outline .mat-form-field-outline {
+  border: none !important;
+}
